# serializer version: 1
# name: test_valid_data
  NextDns(
    profiles=list([
      ProfileInfo(
        fingerprint='fakeprofile12',
        id='fakepr',
        name='Fake Profile',
      ),
    ]),
  )
# ---
# name: test_valid_data.1
  AllAnalytics(
    dnssec=AnalyticsDnssec(
      not_validated_queries=793765,
      validated_queries=49451,
      validated_queries_ratio=5.9,
    ),
    encryption=AnalyticsEncryption(
      encrypted_queries=1380260,
      encrypted_queries_ratio=100.0,
      unencrypted_queries=40,
    ),
    ip_versions=AnalyticsIpVersions(
      ipv4_queries=1338183,
      ipv6_queries=42117,
      ipv6_queries_ratio=3.1,
    ),
    protocols=AnalyticsProtocols(
      doh3_queries=88888,
      doh3_queries_ratio=21.0,
      doh_queries=99999,
      doh_queries_ratio=23.6,
      doq_queries=55555,
      doq_queries_ratio=13.1,
      dot_queries=101010,
      dot_queries_ratio=23.9,
      tcp_queries=33333,
      tcp_queries_ratio=7.9,
      udp_queries=44444,
      udp_queries_ratio=10.5,
    ),
    status=AnalyticsStatus(
      all_queries=1380300,
      allowed_queries=5452,
      blocked_queries=530805,
      blocked_queries_ratio=38.5,
      default_queries=837764,
      relayed_queries=6279,
    ),
  )
# ---
# name: test_valid_data.2
  ConnectionStatus(
    connected=True,
    profile_id='fakepr',
  )
# ---
# name: test_valid_data.3
  Settings(
    ai_threat_detection=True,
    allow_affiliate=True,
    anonymized_ecs=True,
    bav=False,
    block_9gag=False,
    block_amazon=False,
    block_bereal=False,
    block_blizzard=False,
    block_bypass_methods=True,
    block_chatgpt=False,
    block_csam=True,
    block_dailymotion=False,
    block_dating=True,
    block_ddns=True,
    block_discord=False,
    block_disguised_trackers=True,
    block_disneyplus=False,
    block_ebay=False,
    block_facebook=False,
    block_fortnite=False,
    block_gambling=True,
    block_google_chat=False,
    block_hbomax=False,
    block_hulu=False,
    block_imgur=False,
    block_instagram=False,
    block_leagueoflegends=False,
    block_mastodon=False,
    block_messenger=False,
    block_minecraft=False,
    block_netflix=False,
    block_nrd=True,
    block_online_gaming=False,
    block_page=False,
    block_parked_domains=True,
    block_pinterest=False,
    block_piracy=True,
    block_playstation_network=False,
    block_porn=True,
    block_primevideo=False,
    block_reddit=False,
    block_roblox=False,
    block_signal=False,
    block_skype=False,
    block_snapchat=False,
    block_social_networks=False,
    block_spotify=False,
    block_steam=False,
    block_telegram=False,
    block_tiktok=False,
    block_tinder=False,
    block_tumblr=False,
    block_twitch=False,
    block_twitter=False,
    block_video_streaming=False,
    block_vimeo=False,
    block_vk=False,
    block_whatsapp=False,
    block_xboxlive=False,
    block_youtube=False,
    block_zoom=False,
    cache_boost=True,
    cname_flattening=True,
    cryptojacking_protection=True,
    dga_protection=True,
    dns_rebinding_protection=True,
    google_safe_browsing=True,
    idn_homograph_attacks_protection=True,
    logs=True,
    logs_location='ch',
    logs_retention=720,
    safesearch=False,
    threat_intelligence_feeds=True,
    typosquatting_protection=True,
    web3=True,
    youtube_restricted_mode=False,
  )
# ---
# name: test_valid_data.4
  'Fake Profile'
# ---
# name: test_valid_data.5
  'fakepr'
# ---
